# QtKohzuController

./: .gitmodules  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  main.cpp
src/app/AxisControlWidget/: AxisControlWidget.cpp  AxisControlWidget.h  AxisControlWidget.ui
src/app/axiscontrollwidget/: AxisControlWidget.cpp  AxisControlWidget.h  AxisControlWidget.ui
src/app/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/app/presetdialog/: PresetDialog.cpp  PresetDialog.h  PresetDialog.ui
src/app/resources/styles/: stylesheet.qss
src/lib/qt-kohzu-manager/: CMakeLists.txt  PresetManager.cpp  PresetManager.h  QtKohzuManager.cpp  QtKohzuManager.h  StageMotorInfo.h
